add happenings web endpoint
